--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -14,7 +14,7 @@
 			<div class="loading-wrapper"></div>
 		</div>
 		<header>
-			<div class="container h-100"><a class="logo" href="index.html"><img class="lazyload blur-up" data-src="./assets/logo.png" alt="WEST-LAKES"></a>
+			<div class="container h-100"><a class="logo" href="index.html"><img class="lazyload blur-up" data-src="./assets/logo.png" alt="WEST-LAKES"><img class="icon-logo lazyload blur-up" data-src="./assets/icon-logo.png" alt="WEST-LAKES"></a>
 				<div class="row no-gutters ai-c h-100">
 					<nav>
 						<ul>
@@ -27,7 +27,6 @@
 							<li><a href="#" data-scroll-to="7">thư viện</a></li>
 						</ul>
 					</nav>
-					<div class="toggle-menu-mobile"></div>
 					<div class="language">
 						<ul>
 							<li class="active"><a href="#">en</a></li>
