update css, effect

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -310,16 +310,20 @@
 					</div>
 				</div>
 				<div class="map-index-4">
-					<div class="map-wrapper"><img src="./assets/images/background/index-4.png" id="map-image" style="width: 1920px; max-width: 100%; height: auto;" alt="" usemap="#projectmap" />
-<map name="projectmap" class="image-map">
-<area shape="circle" coords="1065,410,40" href="#" area-target="1" />
-<area shape="circle" coords="1154,571,40" href="#" area-target="2" />
-<area shape="circle" coords="1530,590,40" href="#" area-target="3" />
-<area shape="circle" coords="1650,500,40" href="#" area-target="4" />
-<area shape="circle" coords="1720,362,40" href="#" area-target="5" />
-<area shape="circle" coords="1565,337,40" href="#" area-target="6" />
-<area shape="circle" coords="1642,247,40" href="#" area-target="7" />
-</map>
+					<div class="map-wrapper">
+						<div class="imgMapCanvas">
+							<div class="map-canvas"><map class="image-map" name="projectmap">
+									<area shape="circle" coords="1068,409,37" href="#" area-target="1">
+									<area shape="circle" coords="1156,573,37" href="#" area-target="2">
+									<area shape="circle" coords="1532,592,37" href="#" area-target="3">
+									<area shape="circle" coords="1650,500,37" href="#" area-target="4">
+									<area shape="circle" coords="1720,362,37" href="#" area-target="5">
+									<area shape="circle" coords="1567,337,37" href="#" area-target="6">
+									<area shape="circle" coords="1642,247,37" href="#" area-target="7"></map>
+								<canvas></canvas>
+							</div>
+							<div class="map-image"><img src="./assets/images/background/index-4.png" id="map-image" style="width: 1920px; max-width: 100%; height: auto;" alt="" usemap="#projectmap"></div>
+						</div>
 						<div class="map-dialog">
 							<div class="dialog dialog-1" data-dialog="1">
 								<div class="dialog-wrapper">
@@ -723,11 +727,11 @@
 								<div class="col-lg-6">
 									<div class="review-video">
 										<div class="block-video">
-											<div class="youtube-api" data-url="https://www.youtube.com/watch?v=_jQSP0y32Rk&amp;feature=emb_title"></div>
+											<div class="youtube-api" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0"></div>
 										</div>
 										<div class="content" data-bg="./assets/images/background/text-review-video.png">
-											<h3>Lorem ipsum dolor sit amet</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
+											<h3>Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
+											<p>Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)</p>
 											<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 										</div>
 									</div>
@@ -739,55 +743,61 @@
 								<div class="swiper-container">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
-											<div class="item active" data-url="https://www.youtube.com/watch?v=D4hAVemuQXY">
+											<div class="item active" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
+													<h3 class="lcl lcl-1">Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
+													<p class="d-n">Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
 											</div>
 										</div>
 										<div class="swiper-slide">
-											<div class="item" data-url="https://www.youtube.com/watch?v=D4hAVemuQXY">
+											<div class="item" data-url="https://www.youtube.com/watch?v=lNYEb89BPDs">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
+													<h3 class="lcl lcl-1">Khu đô thị Phúc an city Giai đoạn 2 khu biệt thự phúc an tiến độ tháng 6/2020</h3>
+													<p class="d-n">Giai đoạn 2 khu biệt thự phúc an với hơn 500 căn biệt thự mini, hiện đang trong quá trình bàn giao nhà, Các phân khu tiện ích cũng đang trong quá trình hoàn thiện những công đoan cuối cùng.</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
 											</div>
 										</div>
 										<div class="swiper-slide">
-											<div class="item" data-url="https://www.youtube.com/watch?v=D4hAVemuQXY">
+											<div class="item" data-url="https://www.youtube.com/watch?v=yExVYFvfqSI">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
+													<h3 class="lcl lcl-1">Dự án Bella villa đức hoà Tiến độ tháng 6/2020 giai đoạn 2</h3>
+													<p class="d-n">Video tiến độ dự án Bella villa đức hoà, Toạ lạc ngay mặt tiền tỉnh lộ 824, Quy mô 9,2 ha với hơn 400 căn biệt thự song lập và nhà phố liền kề.</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
 											</div>
 										</div>
 										<div class="swiper-slide">
-											<div class="item" data-url="https://www.youtube.com/watch?v=D4hAVemuQXY">
+											<div class="item" data-url="https://www.youtube.com/watch?v=X1K6g-vhfFM">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
+													<h3 class="lcl lcl-1">khu biệt thự dự án phúc an city giai đoạn 2 tháng 5 năm 2020</h3>
+													<p class="d-n">Video chi tiết khu biệt thự dự án phúc an city giai đoạn 2, tháng 5 năm 2020, hiện tại các hạng mục trong dự án đã hoàn thiện 80 - 90%. các block nhà đã xong, quý khách hàng có thể nhận nhà và hoàn thiện để vào ở</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
 											</div>
 										</div>
 										<div class="swiper-slide">
-											<div class="item" data-url="https://www.youtube.com/watch?v=D4hAVemuQXY">
+											<div class="item" data-url="https://www.youtube.com/watch?v=HGuZXRY9tw8">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
+													<h3 class="lcl lcl-1">Dự án Solar City bến lức Tiến độ tháng 6 năm 2020 CĐT Trần anh group</h3>
+													<p class="d-n">Dự án Solar city quy mô 4,8ha với 225 căn nhà phố liền kề, thiết kế 1 trệt 2 lầu, view hơn 300m bờ sông vàm cỏ đông, toạ lạc ngay mặt tiền đường Nguyễn văn tuôi - Nguyễn trung trực thuộc trung tâm thị trấn bến lức</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
 											</div>
 										</div>
 										<div class="swiper-slide">
-											<div class="item" data-url="https://www.youtube.com/watch?v=D4hAVemuQXY">
+											<div class="item" data-url="https://www.youtube.com/watch?v=01ZCK41fnXk">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
+													<h3 class="lcl lcl-1">Dự án WEST LAKES Golf & Villas Mới nhất ( Biệt thự sân golf )</h3>
+													<p class="d-n">Video chi tiết dự án Biệt thự Sân Golf WEST LAKES GOLF& VILLAS, Phát triển dự án tập đoàn Trần anh group. Quy mô 13ha với hơn 500 căn BT song lập - đơn lập - và biệt thự mini. </p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
 											</div>
