--- a/_dist/index.html
+++ b/_dist/index.html
@@ -839,13 +839,13 @@
 								<div class="block-form">
 									<form action="#">
 										<div class="input-group">
-											<input class="form-control" type="text" placeholder="Name">
+											<input class="form-control" type="text" placeholder="Name" name="Name"><span class="field-validate-error">Error</span>
 										</div>
 										<div class="input-group">
-											<input class="form-control" type="text" placeholder="Email">
+											<input class="form-control" type="text" placeholder="Email" name="Email"><span class="field-validate-error">Error</span>
 										</div>
 										<div class="input-group">
-											<input class="form-control" type="text" placeholder="Phone">
+											<input class="form-control" type="text" placeholder="Phone" name="Phone"><span class="field-validate-error">Error</span>
 										</div>
 										<div class="submit">
 											<button data-url="/test">gửi</button>
