cofn fixeed menu

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -29,8 +29,8 @@
 					</nav>
 					<div class="language">
 						<ul>
-							<li class="active"><a href="#">en</a></li>
-							<li><a href="#">vn</a></li>
+							<li class="item active" data-language="vn"><a>en</a></li>
+							<li class="item" data-language="en"><a>vn</a></li>
 						</ul>
 					</div>
 					<div class="search">
@@ -394,13 +394,13 @@
 						<div class="list-fixed-item">
 							<ul>
 								<li data-target="matbang-1" data-bg-item="yellow">
-									<h5>Biệt thự mini - 1</h5>
+									<h5>Biệt thự mini</h5>
 								</li>
 								<li data-target="matbang-2" data-bg-item="aqua">
-									<h5>Biệt thự mini - 2</h5>
+									<h5>Biệt thự đơn lập</h5>
 								</li>
 								<li data-target="matbang-3" data-bg-item="pink">
-									<h5>Biệt thự mini - 3</h5>
+									<h5>Biệt thự song lập</h5>
 								</li>
 							</ul>
 						</div>
