--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -29,8 +29,8 @@
 					</nav>
 					<div class="language">
 						<ul>
-							<li class="active"><a href="#">en</a></li>
-							<li><a href="#">vn</a></li>
+							<li class="item active" data-language="vn"><a>en</a></li>
+							<li class="item" data-language="en"><a>vn</a></li>
 						</ul>
 					</div>
 					<div class="search">
