--- a/_dist/index.html
+++ b/_dist/index.html
@@ -365,8 +365,8 @@
 					<div class="container map-index-4-container">
 						<div class="block-content">
 							<div class="content">
-								<h2>TIỆN ÍCH ĐẲNG CẤP 5 SAO<br>DÀNH CHO GIỚI THƯỢNG LƯU</h2>
-								<div class="desc">
+								<h2 class="wow fadeInDown" data-wow-delay=".2s">TIỆN ÍCH ĐẲNG CẤP 5 SAO<br>DÀNH CHO GIỚI THƯỢNG LƯU</h2>
+								<div class="desc wow fadeInLeft" data-wow-delay=".6s">
 									<ul>
 										<li>Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.</li>
 										<li>Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…</li>
@@ -861,6 +861,9 @@
 			<div class="block-item">
 				<div class="item css-selector">
 					<div class="icon"><img class="svg" data-src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
+					<div class="text-hover">
+						<h5>VIEW 360<sup>o</sup></h5>
+					</div>
 				</div>
 			</div>
 			<div class="block-item" type="text">
@@ -872,6 +875,9 @@
 			<div class="block-item">
 				<div class="item css-selector">
 					<div class="icon"><img class="svg" data-src="./assets/icons/phone.svg" alt="PHONE"></div>
+					<div class="text-hover">
+						<h5>0938 188 329</h5>
+					</div>
 				</div>
 			</div>
 			<div class="block-item">
