--- a/_dist/index.html
+++ b/_dist/index.html
@@ -35,6 +35,14 @@
 					</div>
 					<div class="search">
 						<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/search.png" alt="SEARCH"></div>
+						<div class="block-form">
+							<form>
+								<div class="form-group">
+									<input class="form-control" type="search" placeholder="Tìm kiếm">
+									<button><img class="lazyload blur-up" data-src="./assets/icons/search-white.png" alt="SEARCH"></button>
+								</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -883,6 +891,9 @@
 			<div class="block-item">
 				<div class="item css-selector">
 					<div class="icon"><img class="svg" data-src="./assets/icons/download.svg" alt="PHONE"></div>
+					<div class="text-hover">
+						<h5>tải brochure</h5>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -890,6 +901,7 @@
 			<p>Copyright © 2019 Your.Designed by Web4G Solutions</p>
 		</footer>
 		<div id="overlay"></div>
+		<div id="back-to-top"><img src="./assets/icons/back-top.png" alt=""></div>
 		<script type="text/javascript" src="./js/core.min.js"></script>
 		<script type="text/javascript" src="./js/main.min.js"></script>
 		<script src="./js/YoutubeController.min.js"></script>
