--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -35,6 +35,14 @@
 					</div>
 					<div class="search">
 						<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/search.png" alt="SEARCH"></div>
+						<div class="block-form">
+							<form>
+								<div class="form-group">
+									<input class="form-control" type="search" placeholder="Tìm kiếm">
+									<button><img class="lazyload blur-up" data-src="./assets/icons/search-white.png" alt="SEARCH"></button>
+								</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -135,6 +143,7 @@
 			<p>Copyright © 2019 Your.Designed by Web4G Solutions</p>
 		</footer>
 		<div id="overlay"></div>
+		<div id="back-to-top"><img src="./assets/icons/back-top.png" alt=""></div>
 		<script type="text/javascript" src="./js/core.min.js"></script>
 		<script type="text/javascript" src="./js/main.min.js"></script>
 		<script src="./js/YoutubeController.min.js"></script>
