--- a/_dist/index.html
+++ b/_dist/index.html
@@ -14,19 +14,35 @@
 			<div class="loading-wrapper"></div>
 		</div>
 		<header>
-			<div class="container h-100"><a class="logo" href="index.html"><img class="lazyload blur-up" data-src="./assets/logo.png" alt="WEST-LAKES"><img class="icon-logo lazyload blur-up" data-src="./assets/icon-logo.png" alt="WEST-LAKES"></a>
+			<div class="container h-100"><a class="logo" href="index.html"><img class="lazyload blur-up" data-src="./assets/logo.png" alt="WEST-LAKES"><img class="icon-logo lazyload blur-up" data-src="./assets/icon-logo-new.png" alt="WEST-LAKES"></a>
 				<div class="row no-gutters ai-c h-100">
-					<nav>
-						<ul>
-							<li class="active"><a href="#" data-scroll-to="1">giới thiệu</a></li>
-							<li><a href="#" data-scroll-to="2">vị trí và tiện ích</a></li>
-							<li><a href="#" data-scroll-to="3">mặt bằng</a></li>
-							<li><a href="#" data-scroll-to="4">chương trình bán hàng</a></li>
-							<li><a href="#" data-scroll-to="5">hỗ trợ tài chính</a></li>
-							<li><a href="#" data-scroll-to="6">tiến độ</a></li>
-							<li><a href="#" data-scroll-to="7">thư viện</a></li>
-						</ul>
-					</nav>
+					<div class="slider-menu">
+						<div class="swiper-container">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="item active"><a href="#" data-scroll-to="1">giới thiệu</a></div>
+								</div>
+								<div class="swiper-slide">
+									<div class="item"><a href="#" data-scroll-to="2">vị trí và tiện ích</a></div>
+								</div>
+								<div class="swiper-slide">
+									<div class="item"><a href="#" data-scroll-to="3">mặt bằng</a></div>
+								</div>
+								<div class="swiper-slide">
+									<div class="item"><a href="#" data-scroll-to="4">chương trình bán hàng</a></div>
+								</div>
+								<div class="swiper-slide">
+									<div class="item"><a href="#" data-scroll-to="5">hỗ trợ tài chính</a></div>
+								</div>
+								<div class="swiper-slide">
+									<div class="item"><a href="#" data-scroll-to="6">tiến độ</a></div>
+								</div>
+								<div class="swiper-slide">
+									<div class="item"><a href="#" data-scroll-to="7">thư viện</a></div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="language">
 						<ul>
 							<li class="item active" data-language="vn"><a>en</a></li>
