--- a/_dist/index.html
+++ b/_dist/index.html
@@ -77,7 +77,7 @@
 								<div class="section" data-bg="./assets/images/background/index-2.1.png">
 									<div class="block-content mx-at bg-1" max-width="845px" data-bg-multiply>
 										<div class="content ta-c">
-											<div class="block-title mx-at" max-width="600px">
+											<div class="block-title mx-at">
 												<h2 class="wow fadeInLeft" font-size="40px" data-wow-delay=".2s">GIÁ TRỊ DỰ ÁN</h2>
 											</div>
 											<div class="sub-title wow fadeInLeft" data-wow-delay=".3s">
@@ -85,7 +85,7 @@
 												<p>Quần thể biệt thự nghỉ dưỡng ven đô,<br>ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh</p>
 											</div>
 											<div class="desc wow fadeInLeft" data-wow-delay=".4s">
-												<p>Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.</p>
+												<p>Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.</p>
 											</div>
 										</div>
 									</div>
@@ -146,11 +146,11 @@
 				<div class="block-1">
 					<div class="container h-100">
 						<div class="block-content" max-width="40%">
-							<div class="content">
-								<div class="block-title" after-bg-main>
-									<h2 class="wow fadeInDown" data-wow-delay=".2s">VỊ TRÍ & TIỆN ÍCH</h2>
+							<div class="content a">
+								<div class="block-title wow fadeInDown" data-wow-delay=".2s" after-bg-main>
+									<h2>VỊ TRÍ & TIỆN ÍCH</h2>
 								</div>
-								<div class="desc wow fadeInDown" data-wow-delay=".3s">
+								<div class="desc wow fadeInDown" data-wow-delay=".4s">
 									<h3>Vị trí tiềm năng – Động lực sinh lời vượt trội</h3>
 									<p>Tọa lạc ngay mặt tiền Tỉnh lộ 822 thuộc huyện Đức Hòa, tỉnh Long An, West Lakes Golf & Villas là Đô thị sân Golf đầu tiên sở hữu vị trí hội tụ đầy đủ mọi yếu tố “nội lực” cần thiết giúp thúc đẩy sự sinh lời nhanh chóng.</p>
 								</div>
@@ -188,22 +188,19 @@
 								<div class="item wow fadeInLeft" data-wow-delay=".2s">
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-2__1.png" alt="ICON-1"></div>
 									<div class="text">
-										<p>Cách bệnh viện</p>
-										<p>Đa Khoa Xuyên Á 7km</p>
+										<p>Cách bệnh viện<br>đa Khoa Xuyên Á 7km</p>
 									</div>
 								</div>
 								<div class="item wow fadeInLeft" data-wow-delay=".3s">
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-2__2.png" alt="ICON-2"></div>
 									<div class="text">
-										<p>Cách bệnh viện</p>
-										<p>Đa Khoa Xuyên Á 7km</p>
+										<p>Nằm cạnh bên các<br>khu công nghiệp lớn</p>
 									</div>
 								</div>
 								<div class="item wow fadeInLeft" data-wow-delay=".4s">
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-2__3.png" alt="ICON-3"></div>
 									<div class="text">
-										<p>Cách bệnh viện</p>
-										<p>Đa Khoa Xuyên Á 7km</p>
+										<p>Cách 2 trung tâm<br>hành chính lớn 3km</p>
 									</div>
 								</div>
 							</div>
@@ -404,8 +401,8 @@
 			<section class="index-5" data-scroll-id="3" data-bg="./assets/images/background/index-5.png">
 				<div class="block-content ta-c mx-at" max-width="50%">
 					<div class="content">
-						<div class="block-title">
-							<h2 class="wow fadeInDown" data-wow-delay=".2s">MẶT BẰNG</h2>
+						<div class="block-title mx-at wow fadeInDown" data-wow-delay=".2s">
+							<h2>MẶT BẰNG</h2>
 						</div>
 						<div class="desc wow fadeInDown" data-wow-delay=".3s">
 							<p>Biệt thự sân golf West Lakes Golf & Villas bao gồm 3 loại sản phẩm: Biệt thự mini, biệt thự đơn lập và biệt thự song lập. Các công trình đều được thiết kế và xây dựng theo phong cách đậm chất tân cổ điển, hiện đại trong kiến trúc và sang trọng về nội thất.</p>
@@ -476,16 +473,16 @@
 					<div class="container">
 						<div class="block-content ta-c mx-at" max-width="60%">
 							<div class="content">
-								<div class="block-title">
+								<div class="block-title mx-at">
 									<h2>CHƯƠNG TRÌNH BÁN HÀNG</h2>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="block-2" full-screen data-bg="./assets/images/background/index-6-block-2.png">
+				<div class="block-2" data-bg="./assets/images/background/index-6-block-2.png">
 					<div class="container h-100">
-						<div class="block-content h-100 mx-at" max-width="1088px" data-bg="./assets/images/background/item-index-6.png">
+						<div class="block-content h-100 mx-at" max-width="1088px" data-bg-multiply>
 							<div class="content ta-c">
 								<div class="price">
 									<h4>giá công khai chỉ từ</h4>
@@ -493,7 +490,6 @@
 									<p>Chỉ cần thanh toán 15% bạn đã sở hữu ngay căn biệt thự view sân Golf đẳng cấp liền kề Tp Hồ Chí Minh.</p>
 								</div>
 								<div class="prioritize mx-at" max-width="80%">
-									<h3>Tối ưu chính sách thanh toán và chiết khấu cao:</h3>
 									<ul>
 										<li class="wow fadeInDown" data-wow-delay=".2s">
 											<div class="icon ov-h"><img class="lazyload ofcv" data-src="./assets/icons/icon-index-6__1.png" alt=""></div>
@@ -510,7 +506,6 @@
 									</ul>
 								</div>
 								<div class="sale">
-									<h3>Khuyến mãi có một không hai:</h3>
 									<ul>
 										<li class="wow fadeInUp" data-wow-delay=".2s">
 											<div class="icon ov-h"><img class="lazyload ofcv" data-src="./assets/icons/icon-index-6__3.png" alt=""></div>
@@ -613,7 +608,7 @@
 						</div>
 						<div class="list-item">
 							<div class="item wow fadeInUp" data-wow-delay=".2s">
-								<div class="item-content" data-bg="./assets/images/background/item-index-8__1.png">
+								<div class="item-content" data-bg-multiply>
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-8__1.png" alt=""></div>
 									<div class="text ta-c">
 										<p>Lãi xuất từ 0%  đến 06 tháng đầu</p>
@@ -621,7 +616,7 @@
 								</div>
 							</div>
 							<div class="item wow fadeInDown" data-wow-delay=".4s">
-								<div class="item-content" data-bg="./assets/images/background/item-index-8__2.png">
+								<div class="item-content" data-bg-multiply>
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-8__2.png" alt=""></div>
 									<div class="text ta-c">
 										<p>Ân hạn gốc lãi suất cố định 1% / tháng/ dư nợ gốc thực tế giảm dần cho 30 tháng.</p>
@@ -629,7 +624,7 @@
 								</div>
 							</div>
 							<div class="item wow fadeInUp" data-wow-delay=".6s">
-								<div class="item-content" data-bg="./assets/images/background/item-index-8__1.png">
+								<div class="item-content" data-bg-multiply>
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-8__3.png" alt=""></div>
 									<div class="text ta-c">
 										<p>Vay lên đến 50% giá trị căn biệt thự</p>
@@ -637,7 +632,7 @@
 								</div>
 							</div>
 							<div class="item wow fadeInDown" data-wow-delay=".8s">
-								<div class="item-content" data-bg="./assets/images/background/item-index-8__2.png">
+								<div class="item-content" data-bg-multiply>
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-8__4.png" alt=""></div>
 									<div class="text ta-c">
 										<p>Thời gian 36 tháng</p>
@@ -645,7 +640,7 @@
 								</div>
 							</div>
 							<div class="item wow fadeInUp" data-wow-delay="1s">
-								<div class="item-content" data-bg="./assets/images/background/item-index-8__1.png">
+								<div class="item-content" data-bg-multiply>
 									<div class="icon"><img class="lazyload blur-up" data-src="./assets/icons/icon-index-8__5.png" alt=""></div>
 									<div class="text ta-c">
 										<p>Hồ sơ đơn giản, giải ngân nhanh chóng</p>
@@ -677,7 +672,7 @@
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt="">
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
-												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+												<div class="text" data-bg-multiply>
 													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
 													<p class="lcl lcl-2">Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
 												</div></a></div>
@@ -685,7 +680,7 @@
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt="">
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
-												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+												<div class="text" data-bg-multiply>
 													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
 													<p class="lcl lcl-2">Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
 												</div></a></div>
@@ -693,7 +688,7 @@
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt="">
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
-												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+												<div class="text" data-bg-multiply>
 													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
 													<p class="lcl lcl-2">Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
 												</div></a></div>
@@ -701,7 +696,7 @@
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt="">
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
-												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+												<div class="text" data-bg-multiply>
 													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
 													<p class="lcl lcl-2">Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
 												</div></a></div>
@@ -709,7 +704,7 @@
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt="">
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
-												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+												<div class="text" data-bg-multiply>
 													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
 													<p class="lcl lcl-2">Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
 												</div></a></div>
@@ -717,7 +712,7 @@
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt="">
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
-												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+												<div class="text" data-bg-multiply>
 													<h3 class="lcl lcl-1">Lorem ipsum dolor</h3>
 													<p class="lcl lcl-2">Lorem ipsum dolor sit amet, consectetuer adipiscing eli.</p>
 												</div></a></div>
@@ -738,7 +733,7 @@
 								<div class="col-lg-6">
 									<div class="block-content mx-at">
 										<div class="content ta-c">
-											<div class="block-title mx-at" max-width="75%">
+											<div class="block-title mx-at wow fadeInLeft" data-wow-delay=".2s">
 												<h2>CHỦ ĐẦU TƯ</h2>
 											</div>
 											<div class="desc">
@@ -751,11 +746,9 @@
 								<div class="col-lg-6">
 									<div class="review-video">
 										<div class="block-video">
-											<div class="youtube-api" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0"></div>
+											<div class="youtube-api" data-thumbnail="./assets/images/items/index-9__1.png" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0"></div>
 										</div>
 										<div class="content" data-bg="./assets/images/background/text-review-video.png">
-											<h3>Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
-											<p>Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)</p>
 											<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 										</div>
 									</div>
@@ -770,7 +763,6 @@
 											<div class="item active" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
 													<p class="d-n">Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -780,7 +772,6 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=lNYEb89BPDs">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Khu đô thị Phúc an city Giai đoạn 2 khu biệt thự phúc an tiến độ tháng 6/2020</h3>
 													<p class="d-n">Giai đoạn 2 khu biệt thự phúc an với hơn 500 căn biệt thự mini, hiện đang trong quá trình bàn giao nhà, Các phân khu tiện ích cũng đang trong quá trình hoàn thiện những công đoan cuối cùng.</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -790,7 +781,6 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=yExVYFvfqSI">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Dự án Bella villa đức hoà Tiến độ tháng 6/2020 giai đoạn 2</h3>
 													<p class="d-n">Video tiến độ dự án Bella villa đức hoà, Toạ lạc ngay mặt tiền tỉnh lộ 824, Quy mô 9,2 ha với hơn 400 căn biệt thự song lập và nhà phố liền kề.</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -800,7 +790,6 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=X1K6g-vhfFM">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">khu biệt thự dự án phúc an city giai đoạn 2 tháng 5 năm 2020</h3>
 													<p class="d-n">Video chi tiết khu biệt thự dự án phúc an city giai đoạn 2, tháng 5 năm 2020, hiện tại các hạng mục trong dự án đã hoàn thiện 80 - 90%. các block nhà đã xong, quý khách hàng có thể nhận nhà và hoàn thiện để vào ở</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -810,7 +799,6 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=HGuZXRY9tw8">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Dự án Solar City bến lức Tiến độ tháng 6 năm 2020 CĐT Trần anh group</h3>
 													<p class="d-n">Dự án Solar city quy mô 4,8ha với 225 căn nhà phố liền kề, thiết kế 1 trệt 2 lầu, view hơn 300m bờ sông vàm cỏ đông, toạ lạc ngay mặt tiền đường Nguyễn văn tuôi - Nguyễn trung trực thuộc trung tâm thị trấn bến lức</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -820,7 +808,6 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=01ZCK41fnXk">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
-													<h3 class="lcl lcl-1">Dự án WEST LAKES Golf & Villas Mới nhất ( Biệt thự sân golf )</h3>
 													<p class="d-n">Video chi tiết dự án Biệt thự Sân Golf WEST LAKES GOLF& VILLAS, Phát triển dự án tập đoàn Trần anh group. Quy mô 13ha với hơn 500 căn BT song lập - đơn lập - và biệt thự mini. </p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -908,7 +895,7 @@
 				<div class="item css-selector">
 					<div class="icon"><img class="svg" data-src="./assets/icons/download.svg" alt="PHONE"></div>
 					<div class="text-hover">
-						<h5>tải brochure</h5>
+						<h5>tải chính sách thanh toán</h5>
 					</div>
 				</div>
 			</div>
